[project]
name = "frbsf-economic-letters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "boto3>=1.41.5",
    "fastapi>=0.122.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
]
